--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
