--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "expo": "~51.0.10",
+    "expo-font": "~12.0.7",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-vector-icons": "^10.1.0",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
