--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "expo": "~51.0.10",
     "expo-constants": "~16.0.2",
