--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
@@ -21,6 +22,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "3.31.1",
@@ -28,7 +30,8 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
