--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react": "~18.2.79",
     "expo": "~51.0.10",
     "expo-constants": "~16.0.2",
@@ -31,14 +32,18 @@
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "3.31.1",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "typescript": "~5.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.73.0"
   },
   "private": true
 }
