--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.4",
@@ -39,7 +40,8 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "typescript": "~5.3.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-image-picker": "~15.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
