--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.6",
     "@hookform/resolvers": "^3.6.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/drawer": "^6.6.15",
@@ -18,10 +19,12 @@
     "expo": "~51.0.10",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
@@ -40,8 +43,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "typescript": "~5.3.3",
-    "zod": "^3.23.8",
-    "expo-image-picker": "~15.0.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
