--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,11 +15,13 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
+    "@thevsstech/react-native-skeleton": "^2.0.11",
     "@types/react": "~18.2.79",
     "expo": "~51.0.10",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-image-picker": "~15.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
     "expo-splash-screen": "^0.27.5",
@@ -31,10 +33,12 @@
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "3.31.1",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
